# agentregistry

./: .gitignore  AgentRegistry.slnx  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Directory.Packages.props  Dockerfile  LICENSE  MarimerLLC.AgentRegistry.slnx  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml
clients/dotnet/: Directory.Packages.props  MarimerLLC.AgentRegistry.Client.slnx
clients/python/: README.md  pyproject.toml
clients/python/src/marimerllc_agentregistry/: __init__.py  client.py  heartbeat.py  models.py
clients/python/tests/: test_client.py
docs/: async-messaging-plan.md  protocol-a2a.md  protocol-acp.md  protocol-mcp.md  protocol-queued-a2a.md
k8s/: redis.yaml
k8s/agentregistry/: configmap.yaml  deployment.yaml  secret.example.yaml  service.yaml
src/AgentRegistry.Api/: AgentRegistry.Api.csproj  AgentRegistry.Api.http  Program.cs  appsettings.Development.json
src/AgentRegistry.Application/: AgentRegistry.Application.csproj  Exceptions.cs
src/AgentRegistry.Domain/: AgentRegistry.Domain.csproj
src/AgentRegistry.Infrastructure/: AgentRegistry.Infrastructure.csproj  ServiceCollectionExtensions.cs
src/MarimerLLC.AgentRegistry.Api/: MarimerLLC.AgentRegistry.Api.csproj  Program.cs  appsettings.json
src/MarimerLLC.AgentRegistry.Application/: Exceptions.cs  MarimerLLC.AgentRegistry.Application.csproj
src/MarimerLLC.AgentRegistry.Infrastructure/: MarimerLLC.AgentRegistry.Infrastructure.csproj  ServiceCollectionExtensions.cs
tests/: Directory.Build.props
tests/AgentRegistry.Api.Tests/: AgentRegistry.Api.Tests.csproj
(+138 files in other folders)
