[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marimerllc-agentregistry"
version = "0.1.0"
description = "Client library for the MarimerLLC Agent Registry"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/marimerllc_agentregistry"]
